syntax = "proto3";

package github.com.structxz.calc;

option go_package = "github.com/structxz/calc_v3/api;api";

message Task {
	string id = 1;
	string expression_id = 2;
	string operation = 3;
	repeated double operands = 4;
	repeated string depends_on = 5;
}

message TaskResponse {
	bool has_task = 1;
	Task task = 2;
}

message TaskResult {
	string task_id = 1;
	string expression_id = 2;
	double result = 3;
}

message AgentInfo {
	string agent_id = 1;
}

message SubmitResponse {
	bool success = 1;
}